--- a/mallify/package.json
+++ b/mallify/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.4.6",
     "devextreme": "^24.1.7",
     "devextreme-react": "^24.1.7",
+    "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.0.0",
     "react-chartjs-2": "^5.2.0",
